#81 Make code work with java 8.